assets/index.css
:root {
    --system-color: #6667AB;
    --exchange-color: #5E88AB;
    --system-selected-color: #1E2159;
    --exchange-selected-color: #105084;
    --system-hover-color: #276b4f;
    --exchange-hover-color: #276b4f;
    --filter-bg-color: #e9e9e9;
    --exchange-bg-color: #E3EBF1;
    --system-bg-color: #e9e9f3;
    --control-color: #5e88ab;

    --exchange-opacity-when-unimportant: 30%;
    --system-opacity-when-unimportant: 40%;

    --font-family: "Source Sans Pro";
}

body {
    background-color: #ffffff;
    color: #434343;
    font-family: var(--font-family), sans-serif;
    font-size: 18px;
    font-weight: 400;
    line-height: 27px;
}

h1 {
    color: #000000;
}

.subtitle {
    padding-top: 10px;
    padding-bottom: 20px;
}

.button {
    background-color: #6667AB;
    color: #ffffff;
    font-size: 20px;
}

.navbar {
    background-color: #F7F8F9;
    color: #222222;
    font-size: 20px;
}

footer {
    color: #ffffff;
    background-color: #6667AB;
    font-size: 15px;
    padding: 20px 40px;
    flex-shrink: 0;
}

.container {
    display: flex;
    flex-direction: column;
}

div.vis {
    text-align: center;
    flex-grow: 1;
}

svg g text {
    padding: 1em;
}

svg g:hover {
    cursor: pointer;
}

img.logo {
    height: 4em;
    width: auto;
}

.filter-button {
    background-color: #6667ab;
    color: #ffffff;
    font-size: 16px;
    font-family: Arial, sans-serif;
    padding: 10px 20px;
    border: none;
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
    cursor: pointer;
    margin: 5px;
}

.filter-button:hover {
    background-color: #4c4e87;
}

summary.filter {
    cursor: pointer;
    user-select: none;
}

details {
    border-radius: 5px;
    padding: 10px;
}

details.filter {
    background-color: var(--filter-bg-color);
    margin: 15px;
}

details.dataExchange {
    background-color: var(--exchange-bg-color);
}

div.system {
    border-radius: 5px;
    padding: 10px;
    background-color: var(--system-bg-color);
}

summary.filter::marker {
    color: #6667ab;
    font-size: 1.2em;
}

summary.system::marker {
    color: #6667ab;
    font-size: 1.2em;
}

summary.dataExchange {
    cursor: pointer;
    user-select: none;
}

summary.dataExchange::marker {
    color: #434343;
    font-size: 1.2em;
}

a {
    word-wrap: break-word;
    word-break: break-word;
}

hr.filter{
    margin: 3px 0 10px 0;
    background-color: #6667ab
}

hr.system{
    margin: 0;
    background-color: #434343
}

hr.dataExchange{
    margin: 0;
    background-color: #434343
}

summary.property {
    cursor: pointer;
    list-style: none;
    position: relative;
    padding-left: 1.5em;
    user-select: none;
}

summary.property::before {
    content: '+';
    position: absolute;
    left: 0;
}

details[open] > summary.property::before {
    content: '–';
}

.header-container {
    margin: 20px;
}

.infoText {
    word-wrap: break-word;
    word-break: break-word;
}

#systems g {
    fill: var(--system-color);
}

#systems g.selected {
    fill: var(--system-selected-color);
}

#systems.something-selected g.adjacent-to-selected {
    fill: var(--system-selected-color);
}

/*
  we need that color mix because opacity would show the arrow lines beneath
  note that for color-mix(), opacity has to be given as percentage e,g 50%, not decimal 0.5
*/
#systems.something-selected g:not(.selected):not(.adjacent-to-selected) {
    fill: color-mix(in srgb, var(--system-color) var(--system-opacity-when-unimportant), white);
}

g.something-selected path.actual-exchange {
    stroke-opacity: var(--exchange-opacity-when-unimportant);
}

g.something-selected path.actual-exchange.selected {
    stroke: var(--exchange-selected-color);
    stroke-opacity: 1;
}

g.something-selected > g.adjacent-to-selected > path.actual-exchange {
    stroke: var(--exchange-selected-color);
    stroke-opacity: 1;
}

marker.adjacent-to-selected > path {
    fill: var(--exchange-selected-color) !important;
}

path.actual-exchange.hovered {
    stroke: var(--exchange-hover-color) !important;
    stroke-opacity: 1;
}

path.hovered.marker {
    fill: var(--exchange-hover-color) !important;
    stroke-opacity: 1;
}

g.hovered {
    fill: var(--system-hover-color) !important;
    stroke-opacity: 1;
}

.graph {
    position: relative;
    width: 100%;
    height: 100%;
}

.controls {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
}

div.zoom {
    left: 20px;
    top: 15px;
}

div.move {
    left: 70px;
    top: 0;
}

.button-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.horizontal-buttons {
    display: flex;
    align-items: center;
    justify-content: center;
}

.arrow, button.zoom {
    background-color: var(--control-color);
    height: 30px;
    width: 30px;
    color: white;
    border: none;
    border-radius: 7px;
    padding: 5px;
    margin: 2px;
    cursor: pointer;
    font-size: 14px;
}

.arrow:hover, button.zoom:hover {
    background-color: #4b6c88;
}

.center {
    background-color: var(--system-color);;
    color: white;
    border: none;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 16px;
    margin: 2px;
    cursor: pointer;
}

.center:hover {
    background-color: #515288;
}

input[type='checkbox'] {
    cursor: pointer;
}

input[type='checkbox']:disabled {
    cursor: default;
}

div.summaryContent {
    margin-left: 27px;
}

